fix(filters): fix uneven shrinking of images on mobile

--- a/src/views/filter/filter.scss
+++ b/src/views/filter/filter.scss
@@ -34,6 +34,7 @@
 
   &__image {
     display: inline-block;
+    flex: 0 0 auto;
     img {
       height: 8rem;
       width: 8rem;
@@ -48,7 +49,7 @@
     &__title {
       overflow: hidden;
       text-overflow: ellipsis;
-      font-size: $subheader-font-size;
+      font-size: 1.2rem;
     }
     &__shop {
       font-size: 0.7rem;
